--- a/frontend/src/components/TodoEntry.astro
+++ b/frontend/src/components/TodoEntry.astro
@@ -1,4 +1,5 @@
 ---
+import Checkmark from "../components/Checkmark.astro";
 const { title, description } = Astro.props;
 ---
 
@@ -14,7 +15,7 @@ const { title, description } = Astro.props;
             </p>
         </th>
         <th class="checkmark">
-            <h2>check?</h2>
+            <Checkmark />
         </th>
     </tr>
 </table>
@@ -33,8 +34,6 @@ const { title, description } = Astro.props;
 
     .checkmark {
         width: 25%;
-        text-align: center;
-        background-color: aqua;
         padding-right: 0%;
     }
 
