renamed delete Component, new Todos can be created via form

--- a/frontend/src/components/TodoEntry.astro
+++ b/frontend/src/components/TodoEntry.astro
@@ -1,6 +1,6 @@
 ---
 import Checkmark from "../components/Checkmark.astro";
-import Delete from "./Delete.astro";
+import Delete from "./DeleteTodo.astro";
 const { todoEntry } = Astro.props;
 ---
 
