musste erstmal klarkommen, added errorhandling for all requests to server

--- a/frontend/src/components/AddTodoForm.astro
+++ b/frontend/src/components/AddTodoForm.astro
@@ -2,12 +2,12 @@
 
 ---
 
-<form id="newTodoForm">
+<form id="newTodoForm" autocomplete="off">
     <label>
         <input
             type="text"
             id="newTodoTitle"
-            placeholder="Title:"
+            placeholder="title"
             name="title"
             required
         />
@@ -19,7 +19,7 @@
         <input
             type="text"
             id="newTodoDesc"
-            placeholder="Description:"
+            placeholder="description"
             name="description"
         />
     </label>
@@ -30,8 +30,6 @@
 </form>
 
 <script>
-    import { transitionEnabledOnThisPage } from "astro:transitions/client";
-
     let form = document.getElementById("newTodoForm");
     form?.addEventListener("submit", async function (event) {
         event.preventDefault();
@@ -39,23 +37,77 @@
         var title = (
             document.getElementById("newTodoTitle") as HTMLInputElement
         ).value;
+
         var desc = (document.getElementById("newTodoDesc") as HTMLInputElement)
             .value;
 
-        const todoBody = { title: title, description: desc, fulfilled: false };
+        const todoBody = { title: title, desc: desc, fulfilled: false };
 
-        var postNewTodo = await fetch("http://localhost:8080/todo", {
-            method: "POST",
-            body: JSON.stringify(todoBody),
-            headers: {
-                "Content-Type": "application/json",
-            },
-        });
+        // alert("adding: " + JSON.stringify(todoBody));
+        try {
+            const postNewTodoResponse = await fetch(
+                "http://localhost:8080/todo",
+                {
+                    method: "POST",
+                    body: JSON.stringify(todoBody),
+                    headers: {
+                        "Content-Type": "application/json",
+                    },
+                },
+            );
+
+            console.log("postNewTodoResponse: " + postNewTodoResponse.status);
+
+            if (!postNewTodoResponse.ok) {
+                throw new Error(
+                    "Error - Response Status:" + postNewTodoResponse.status,
+                );
+            }
+
+            // LOL, reactivity ig
+            location.reload();
+        } catch (error) {
+            console.error(error);
+        }
     });
 </script>
 
 <style>
     #newTodoForm {
         display: inline-block;
+        width: 100%;
+    }
+
+    input[type="text"] {
+        width: 100%;
+        /* padding: 10px 20px; */
+        margin: 2% 0;
+        box-sizing: border-box;
+        background-color: lightgrey;
+    }
+
+    input::placeholder {
+        color: darkgrey;
+        opacity: 1;
+    }
+
+    #newTodoTitle {
+        padding: 10px 20px;
+        width: 60%;
+    }
+
+    #newTodoDesc {
+        padding: 20px 20px;
+        width: 75%;
+    }
+
+    #submitButton {
+        border: 0;
+        padding: 10px 20px;
+    }
+
+    #submitButton:hover {
+        background-color: lightslategray;
+        transition-duration: 500ms;
     }
 </style>
