--- a/frontend/src/components/Checkmark.astro
+++ b/frontend/src/components/Checkmark.astro
@@ -4,10 +4,15 @@ const todoID = todoEntry.id;
 ---
 
 <button id={`todoButton_${todoID}`} class="todoButtons" data-todoID={todoID}>
-    iD: {todoID} is {JSON.stringify(todoEntry.fulfilled)}
+    <!-- iD: {todoID} is {JSON.stringify(todoEntry.fulfilled)} -->
+    <img class="btnImg" src="box1.svg" />
 </button>
 
 <style>
+    .btnImg {
+        width: 100%;
+    }
+
     .todoButtons {
         padding: 25% 25%;
         margin: 5%;
@@ -31,21 +36,33 @@ const todoID = todoEntry.id;
 
         myData.fulfilled = !myData.fulfilled;
 
-        const response = await fetch(
-            "http://localhost:8080/updateTodo/" + todoID,
-            {
-                method: "POST",
-                body: JSON.stringify(myData),
-                headers: {
-                    "Content-Type": "application/json",
+        try {
+            const updateResponse = await fetch(
+                "http://localhost:8080/updateTodo/" + todoID,
+                {
+                    method: "POST",
+                    body: JSON.stringify(myData),
+                    headers: {
+                        "Content-Type": "application/json",
+                    },
                 },
-            },
-        );
+            );
 
-        console.log("Response: \n" + response);
-        console.log("Response.json(): \n" + response.json);
+            if (!updateResponse.ok) {
+                throw new Error(
+                    "Error - Response Status:" + updateResponse.status,
+                );
+            }
 
-        //console.log("did it update id=" + todoID + "? \n");
+            console.log(
+                "fulfillment - updateResponse: " + updateResponse.status,
+            );
+
+            // LOL, reactivity ig
+            location.reload();
+        } catch (error) {
+            console.error(error);
+        }
     }
 
     const allButtons = document.getElementsByClassName("todoButtons");
