--- a/frontend/src/components/DeleteTodo.astro
+++ b/frontend/src/components/DeleteTodo.astro
@@ -29,9 +29,25 @@ const todoID = todoEntry.id;
         if (todoID === null)
             throw new Error("todoID is null, cant delete todo!");
 
-        const response = await fetch("http://localhost:8080/todo/" + todoID, {
-            method: "DELETE",
-        });
+        try {
+            const response = await fetch(
+                "http://localhost:8080/todo/" + todoID,
+                {
+                    method: "DELETE",
+                },
+            );
+
+            console.log("deleteResponse: " + response.status);
+
+            if (!response.ok) {
+                throw new Error("Error - Response Status:" + response.status);
+            }
+
+            // LOL, reactivity ig
+            location.reload();
+        } catch (error) {
+            console.error(error);
+        }
     }
 
     const allDeleteButtons =
