--- a/frontend/src/components/TodoEntry.astro
+++ b/frontend/src/components/TodoEntry.astro
@@ -14,6 +14,7 @@ const { todoEntry } = Astro.props;
             </h2>
             <p class="todo-description">
                 description: {todoEntry.desc}
+                fulfill: {todoEntry.fulfilled}
             </p>
         </th>
         <th class="checkmark">
