--- a/react-frontend/src/TodoList.css
+++ b/react-frontend/src/TodoList.css
@@ -1,5 +1,6 @@
 .todoEntry-container {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     margin: auto;
     margin-top: 2%;
@@ -15,6 +16,7 @@
     background-color: rgba(50, 63, 83, 0.767);
     border-radius: 2vh;
     box-shadow: 2vh 2vh 1vh rgba(0, 0, 0, 0.308);
+
 }
 
 .todoEntry-box {
@@ -28,13 +30,50 @@
     display: flex;
     justify-content: center;
     align-items: center;
+
+    position: relative;
 }
 
 .todo-title {
+    flex: 2;
     font-size: 1.5vw;
     font-weight: bolder;
+    position: relative;
+
+    user-select: none;
+    /* background-color: lightblue; */
 }
 
-.todo-desc {
+.todoEntry-desc-popup {
+    /* display: block; */
+    /* später = "none" */
     font-size: 1vw;
+    flex-basis: 100%;
+
+    display: flex;
+
+    background-color: rgb(106, 106, 236);
+    text-align: center;
+    border-bottom-left-radius: 2vh;
+    border-bottom-right-radius: 2vh;
+
+
+}
+
+.todoEntry-desc-text {
+    flex: 2.5;
+    padding: 5vh;
+}
+
+.todoEntry-desc-delete {
+    flex: 1;
+    padding: 5vh;
+
+}
+
+.todo-title-linethrough {
+    text-decoration: line-through;
+    text-decoration-thickness: 0.15vw;
+
+    color: rgba(197, 196, 196, 0.671);
 }
