--- a/react-frontend/src/TodoList.css
+++ b/react-frontend/src/TodoList.css
@@ -17,6 +17,9 @@
     border-radius: 2vh;
     box-shadow: 2vh 2vh 1vh rgba(0, 0, 0, 0.308);
 
+
+    white-space: pre-line;
+
 }
 
 .todoEntry-box {
@@ -53,14 +56,17 @@
     display: flex;
 
     background-color: rgb(106, 106, 236);
-    text-align: center;
     border-bottom-left-radius: 2vh;
     border-bottom-right-radius: 2vh;
+
+    align-items: center;
 
 
 }
 
 .todoEntry-desc-text {
+    display: inline-block;
+    text-align: left;
     flex: 2.5;
     padding: 5vh;
 }
