--- a/react-frontend/src/TodoDeleteButton.css
+++ b/react-frontend/src/TodoDeleteButton.css
@@ -20,8 +20,9 @@
 }
 
 .todoEntry-desc-delete-button:hover {
-    background-color: rgba(190, 31, 31, 0.699);
+    background-color: rgb(206, 108, 108);
     transition-duration: 0.5s;
+    color: white;
 
 }
 
