--- a/react-frontend/src/TodoList.css
+++ b/react-frontend/src/TodoList.css
@@ -14,13 +14,19 @@
     border-width: 1vh; */
 
     /* background-color: rgba(50, 63, 83, 0.767); */
-    background-color: #4B6D5B;
 
     border-radius: 2vh;
+    border-top-left-radius: 0;
     box-shadow: 2vh 2vh 1vh rgba(0, 0, 0, 0.308);
+    background-color: #4B6D5B;
 
 
     white-space: pre-line;
+}
+
+.todoEntryCompleted-container {
+
+    background-color: #365042a9;
 }
 
 .todoEntry-box {
@@ -30,12 +36,14 @@
     /* Optional spacing between boxes */
     text-align: center;
     padding: 3%;
+    /* padding: 1% 3% 1% 3%; */
 
     display: flex;
     justify-content: center;
     align-items: center;
 
     position: relative;
+
 }
 
 .todo-title {
@@ -48,6 +56,8 @@
 
     user-select: none;
     color: #e8e6d6;
+
+    cursor: pointer;
     /* background-color: lightblue; */
 }
 
@@ -83,4 +93,45 @@
     text-decoration-thickness: 0.15vw;
 
     color: rgba(197, 196, 196, 0.671);
+}
+
+.section-todos-header {
+    /* background-color: darkgrey; */
+    width: 60%;
+    display: flex;
+
+    align-items: center;
+    justify-content: center;
+
+    margin: 7vh auto 6vh auto;
+
+
+    border-bottom-style: inset;
+    border-left-style: inset;
+}
+
+.section-todos-header-title {
+    flex: 4;
+    color: white;
+    text-align: left;
+
+    padding-left: 5vh;
+
+    font-size: 1vh;
+
+}
+
+.header-button-container {
+    /* background-color: antiquewhite; */
+
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 1vh;
+}
+
+#header-button {
+    padding: 1vh 2vh 1vh 2vh;
+    /* style more */
 }
