--- a/react-frontend/src/TodoList.css
+++ b/react-frontend/src/TodoList.css
@@ -35,8 +35,8 @@
     /* margin: 0 10px; */
     /* Optional spacing between boxes */
     text-align: center;
-    padding: 3%;
-    /* padding: 1% 3% 1% 3%; */
+    /* padding: 3%; */
+    padding: 1% 3% 1% 3%;
 
     display: flex;
     justify-content: center;
@@ -103,11 +103,13 @@
     align-items: center;
     justify-content: center;
 
-    margin: 7vh auto 6vh auto;
+    margin: 7vh auto 1vh auto;
 
 
     border-bottom-style: inset;
     border-left-style: inset;
+
+    cursor: pointer;
 }
 
 .section-todos-header-title {
@@ -134,4 +136,27 @@
 #header-button {
     padding: 1vh 2vh 1vh 2vh;
     /* style more */
+}
+
+#all-active-todos-container {
+    display: block;
+    overflow: hidden;
+
+
+    /* background-color: white; */
+}
+
+#all-active-todos-container.visible {
+
+    opacity: 1;
+    height: 100%;
+
+    transition: all 0.3s ease-in;
+}
+
+#all-active-todos-container.hidden {
+    opacity: 0;
+    height: 0;
+
+    transition: all 0.1s ease-out;
 }
