--- a/react-frontend/src/TodoList.css
+++ b/react-frontend/src/TodoList.css
@@ -138,7 +138,8 @@
     /* style more */
 }
 
-#all-active-todos-container {
+#all-active-todos-container,
+#all-fulfilled-todos-container {
     display: block;
     overflow: hidden;
 
@@ -146,7 +147,8 @@
     /* background-color: white; */
 }
 
-#all-active-todos-container.visible {
+#all-active-todos-container.visible,
+#all-fulfilled-todos-container.visible {
 
     opacity: 1;
     height: 100%;
@@ -154,9 +156,10 @@
     transition: all 0.3s ease-in;
 }
 
-#all-active-todos-container.hidden {
+#all-active-todos-container.hidden,
+#all-fulfilled-todos-container.hidden {
     opacity: 0;
     height: 0;
 
-    transition: all 0.1s ease-out;
+    transition: all 0.3s ease-out;
 }
